fix: Fix webview not rendered on compose desktop